# web-server

./: .gitignore  CMakeLists.txt  README.md
web-server/: client.c  main.c  server.c  socket.c  socket.h  utils.c  utils.h
web-server.xcodeproj/: project.pbxproj
web-server.xcodeproj/xcuserdata/krisnapranav.xcuserdatad/xcschemes/: xcschememanagement.plist
